--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,15 +129,22 @@ a {
   padding: 1rem;
 }
 .question-ilustration {
-  height: 15rem;
-}
-
-.reset-form-container {
-  padding: 0px 50px 50px 50px;
+  height: 10rem;
 }
 
 .reset-form-container h1 {
   font-size: 2.4rem;
   margin-top: 1.5rem;
   margin-bottom: 1.2rem;
+}
+
+.enter-email-instruction {
+  font-weight: 500;
+  font-size: 1rem;
+}
+
+.reset-description-text {
+  font-weight: 400;
+  font-size: 0.9rem;
+  color: rgba(131, 127, 143, 1);
 }
