--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,10 @@ a {
   border-radius: 10px;
 }
 
+.circle {
+  border-radius: 50%;
+}
+
 /* reset password */
 .forgot-password-container {
   background-color: white;
@@ -165,7 +169,13 @@ a {
   width: 100%;
 }
 
+/* profile */
+.dashboard-container {
+  margin: 0.8%;
+}
+
 @media screen and (min-width: 768px) {
+  /* reset password */
   .forgot-password-container {
     background-color: var(--light-blue);
     padding: 0;
@@ -201,5 +211,92 @@ a {
 
   .reset-form-container .reset-description-text {
     margin-bottom: 24%;
+  }
+
+  .sidebar-wrapper {
+    /* margin: 0;
+    position: relative;
+    height: 100%;
+    overflow: hidden;
+    margin-right: 0.8%; */
+  }
+
+  .sidebar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0.8% 0.8% 1% 0.8%;
+    height: calc(100% - 1.6%);
+    background-color: white;
+    width: 17.5%;
+  }
+
+  .sidebar .notification-icon {
+    position: absolute;
+    top: 1%;
+    right: 9.4%;
+    width: 9.5%;
+    height: 9.5%;
+    margin-right: 10%;
+    margin-top: 40%;
+    margin: 1%;
+  }
+  .sidebar .avatar-container {
+    padding: 15%;
+    height: 40%;
+  }
+  .sidebar .avatar-container .avatar {
+    margin-top: 10%;
+    width: 56px;
+    height: 56px;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .sidebar .avatar-container .avatar-name {
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    color: rgba(32, 32, 32, 1);
+  }
+
+  .sidebar .avatar-container .avatar-status {
+    font-family: Roboto;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    color: rgba(32, 32, 32, 1);
+  }
+
+  .sidebar .menu {
+    padding: 15%;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    background-color: var(--blue);
+    height: 60%;
+  }
+
+  .sidebar .menu ul {
+    text-decoration: none;
+    list-style-type: none;
+    padding: 0;
+  }
+
+  .main {
+    background-color: white;
+    margin-left: calc(17.5% + 0.8% + 0.8%);
+    width: calc(100%-21.6%-0.8%);
+  }
+
+  .cover-image-container {
+    height: 26%;
+  }
+
+  .cover-image {
+    width: 25px;
+    height: 100%;
   }
 }
