--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,11 +169,6 @@ a {
   width: 100%;
 }
 
-/* profile */
-.dashboard-container {
-  margin: 0.8%;
-}
-
 @media screen and (min-width: 768px) {
   /* reset password */
   .forgot-password-container {
@@ -213,90 +208,196 @@ a {
     margin-bottom: 24%;
   }
 
-  .sidebar-wrapper {
-    /* margin: 0;
-    position: relative;
-    height: 100%;
-    overflow: hidden;
-    margin-right: 0.8%; */
+  /* profile */
+  .dashboard-container {
+    display: flex;
+    margin: 10px;
   }
 
-  .sidebar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin: 0.8% 0.8% 1% 0.8%;
-    height: calc(100% - 1.6%);
+  .dashboard-container aside {
+    position: sticky;
+    top: 10px;
+    display: flex;
     background-color: white;
-    width: 17.5%;
+    flex-basis: 225px;
+    flex-direction: column;
+    flex-shrink: 0;
+    /* transition: transform 0.15s ease-in-out;
+    z-index: 1038;
+    transform: translateX(-225px);
+    z-index: 1038; */
+    width: 18%;
+    height: calc(100vh - 20px);
+    border-radius: 10px;
   }
 
-  .sidebar .notification-icon {
-    position: absolute;
-    top: 1%;
-    right: 9.4%;
-    width: 9.5%;
-    height: 9.5%;
-    margin-right: 10%;
-    margin-top: 40%;
-    margin: 1%;
-  }
-  .sidebar .avatar-container {
-    padding: 15%;
-    height: 40%;
-  }
-  .sidebar .avatar-container .avatar {
-    margin-top: 10%;
-    width: 56px;
-    height: 56px;
-    object-fit: cover;
-    object-position: center;
+  .dashboard-container aside .notification-icon {
+    margin: 13% 10% 10% 10%;
+    width: 12%;
+    align-self: flex-end;
   }
 
-  .sidebar .avatar-container .avatar-name {
+  .dashboard-container aside .avatar-container {
+    padding: 0 10% 10% 10%;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .dashboard-container aside .avatar-container .avatar-name {
     font-family: Roboto;
+    margin-top: 1rem;
     font-size: 20px;
     font-style: normal;
     font-weight: 500;
-    color: rgba(32, 32, 32, 1);
   }
 
-  .sidebar .avatar-container .avatar-status {
+  .dashboard-container aside .avatar-container .avatar-status {
     font-family: Roboto;
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
-    color: rgba(32, 32, 32, 1);
   }
 
-  .sidebar .menu {
-    padding: 15%;
+  .dashboard-container aside .avatar-image {
+    width: 56px;
+    height: 56px;
+  }
+
+  .dashboard-container aside .menu-container {
+    height: 100%;
+    background-color: var(--blue);
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
-    border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
-    background-color: var(--blue);
-    height: 60%;
+    border-bottom-right-radius: 10px;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    padding: 5% 10% 10% 10%;
   }
 
-  .sidebar .menu ul {
-    text-decoration: none;
-    list-style-type: none;
-    padding: 0;
+  .dashboard-container aside .menu-container .menu-link {
+    display: flex;
+    align-items: center;
+    padding-bottom: 0.75rem;
+    position: relative;
+    font-family: Montserrat;
+    font-size: 0.9rem;
+    font-style: normal;
+    font-weight: 600;
+    color: white;
+    margin-top: 5%;
   }
 
-  .main {
-    background-color: white;
-    margin-left: calc(17.5% + 0.8% + 0.8%);
-    width: calc(100%-21.6%-0.8%);
+  .dashboard-container aside .menu-container .menu-link .menu-icon {
+    margin-right: 10%;
+    height: 1.5rem;
   }
 
-  .cover-image-container {
-    height: 26%;
+  .dashboard-container #main-content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-width: 0;
+    flex-grow: 1;
+    min-height: calc(100vh - 20px);
+    /* margin-left: -225px; */
+    margin-left: 10px;
+    background-color: red;
+    border-radius: 10px;
   }
 
-  .cover-image {
-    width: 25px;
+  .dashboard-container #main-content .image-cover-container {
+    height: 35%;
+  }
+
+  .dashboard-container #main-content .image-cover-container .image-cover {
+    width: 100%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     height: 100%;
+    object-position: center;
+    object-fit: cover;
+  }
+
+  .dashboard-container #main-content .avatar-lg {
+    position: absolute;
+    top: 1%;
+    left: 50%;
+    transform: translate(-49%, 0%);
+  }
+
+  .dashboard-container #main-content .avatar-lg .avatar-image-lg {
+    width: 100%;
+    max-width: 400px;
+    height: auto;
+  }
+
+  .dashboard-container #main-content .avatar-lg .edit-avatar {
+    /* z-index: 10; */
+    position: absolute;
+    right: 0;
+    align-self: flex-end;
+    color: white;
+  }
+
+  .dashboard-container #main-content .avatar-lg span {
+    color: white;
+    display: flex;
+    justify-content: center;
+    margin-top: 10%;
+    font-family: Roboto;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 500;
+  }
+
+  .dashboard-container #main-content .profile-setting {
+    height: 100%;
+    background-color: white;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    padding: 2% 3% 5% 3%;
+  }
+
+  .dashboard-container #main-content .profile-setting h1 {
+    font-size: 1.5rem;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 700;
+  }
+
+  .dashboard-container #main-content .profile-setting .setting-list {
+    margin-top: 2%;
+    overflow-y: auto;
+  }
+
+  .dashboard-container
+    #main-content
+    .profile-setting
+    .setting-list
+    .setting-container {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 3% 0 3%;
+    font-family: Kanit;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    padding: 2% 0 2% 0;
+    border-bottom: 2px solid rgba(230, 237, 246, 1);
+  }
+
+  .dashboard-container
+    #main-content
+    .profile-setting
+    .setting-list
+    .setting-container
+    .setting-icon {
+    width: 1.5rem;
+    margin-right: 5px;
   }
 }
