fix: profile page desktop version

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -406,6 +406,10 @@ a {
 
   /* profile */
 
+  .dashboard-container .humberger-icon {
+    display: none;
+  }
+
   .dashboard-container aside {
     position: sticky;
     top: 10px;
@@ -430,6 +434,12 @@ a {
   }
 
   .dashboard-container aside .avatar-container {
+    padding: 0 10% 10% 10%;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: flex-start;
+    align-items: flex-start;
     padding: 0 10% 10% 10%;
     display: flex;
     flex-direction: column;
