--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,6 +124,9 @@ a {
 .rounded-10px {
   border-radius: 10px;
 }
+.rounded-15px {
+  border-radius: 15px;
+}
 
 .circle {
   border-radius: 50%;
@@ -135,6 +138,10 @@ a {
 
 .fill-black {
   fill: black;
+}
+
+.text-xs {
+  font-size: 12px;
 }
 
 /* reset password */
@@ -334,7 +341,7 @@ a {
   padding: 2% 3% 5% 3%;
 }
 
-.dashboard-container #main-content .profile-setting h1 {
+.dashboard-container #main-content h1 {
   margin-top: 10px;
   font-size: 1.5rem;
   font-family: Montserrat;
@@ -371,6 +378,74 @@ a {
   .setting-icon {
   width: 1.5rem;
   margin-right: 5px;
+}
+
+/* activity */
+.dashboard-container #main-content table {
+}
+.dashboard-container #main-content table th {
+  font-family: Montserrat;
+  font-size: 0.9rem;
+  font-style: normal;
+  font-weight: 600;
+}
+
+.dashboard-container #main-content table tbody tr {
+  background-color: white;
+}
+
+.dashboard-container #main-content table tbody tr th {
+  text-align: center;
+}
+
+.dashboard-container #main-content table tbody tr th:first-child {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+.dashboard-container #main-content table tbody tr td:last-child {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.dashboard-container #main-content table tbody tr td,
+.dashboard-container #main-content table tbody tr th {
+  padding: 5px;
+  font-size: 0.8rem;
+  border-bottom: 2px solid var(--light-blue);
+  vertical-align: middle;
+}
+
+.badge-ongoing {
+  background-color: rgba(210, 222, 237, 1);
+  font-family: Montserrat;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  color: var(--blue);
+}
+
+.dashboard-container #main-content table tbody tr td .score {
+  font-family: Montserrat;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  color: rgba(81, 231, 43, 1);
+}
+
+.dashboard-container #main-content .card .card-body .view-all {
+  font-family: Montserrat;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+}
+.dashboard-container #main-content ::placeholder {
+  font-family: Montserrat;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 17px;
+  letter-spacing: 0em;
+  text-align: left;
 }
 
 @media screen and (min-width: 768px) {
