--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,6 +159,9 @@ a {
 .rotate-180 {
   transform: rotate(180deg);
 }
+.rotate-90 {
+  transform: rotate(90deg);
+}
 
 /* reset password */
 .forgot-password-container {
@@ -365,6 +368,17 @@ a {
   font-weight: 700;
 }
 
+.dashboard-container #main-content h1 a {
+  vertical-align: middle;
+  margin: 0 2% 0 0;
+  text-decoration: none;
+  padding: 0 0 0.3% 0;
+}
+
+/* .dashboard-container #main-content h1 img {
+  padding: 1%;
+} */
+
 .dashboard-container #main-content .profile-setting .setting-list {
   margin-top: 2%;
   overflow-y: auto;
@@ -397,8 +411,6 @@ a {
 }
 
 /* activity */
-.dashboard-container #main-content table {
-}
 
 .dashboard-container #main-content table th {
   font-family: Montserrat;
@@ -414,6 +426,11 @@ a {
 
 .dashboard-container #main-content .my-class-table tbody tr th {
   text-align: center;
+  /* padding-bottom: 0; */
+}
+
+.dashboard-container #main-content .my-class-table tbody tr th {
+  padding-bottom: 0;
 }
 
 .dashboard-container #main-content .my-class-table tbody tr th:first-child {
@@ -516,6 +533,11 @@ a {
 .dashboard-container #main-content .pagination-container .table-page:hover {
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
 }
+
+.dashboard-container #main-content .pagination-container .table-page img {
+  height: 50%;
+}
+
 .dashboard-container #main-content .pagination-container .active {
   background-color: var(--blue);
   color: white;
@@ -538,6 +560,51 @@ a {
   background-color: transparent;
   margin-right: 10px;
 }
+
+/* activity 2 my class */
+.dashboard-container .card .sort-by-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  height: 100%;
+  width: fit-content;
+}
+.dashboard-container .card .sort-by-container .sort-by-text {
+  font-family: Montserrat;
+  font-size: 75%;
+  font-style: normal;
+  font-weight: 500;
+  color: rgba(154, 154, 154, 1);
+  word-wrap: normal;
+}
+.dashboard-container .card select {
+  font-family: Montserrat;
+  font-size: 90%;
+  font-style: normal;
+  font-weight: 500;
+  border: none;
+  outline: none;
+}
+
+/* .dashboard-container .card .sort-by-container select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+} */
+
+.dashboard-container .card .sort-by-container .caret-container {
+  height: 100%;
+  /* margin-left: 10%; */
+}
+
+/* .dashboard-container .card .sort-by-container img {
+  height: 50%;
+  width: 10%;
+  margin-left: 10%;
+  float: right;
+} */
 
 @media screen and (min-width: 768px) {
   /* reset password */
