--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,6 +140,40 @@ a {
   border-radius: 15px;
 }
 
+.rounded-20p {
+  border-radius: 20%;
+}
+
+.rounded-top-5px {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.rounded-top-10px {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.rounded-top-15px {
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+.rounded-bottom-5px {
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.rounded-bottom-10px {
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.rounded-bottom-15px {
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
 .circle {
   border-radius: 50%;
 }
@@ -606,6 +640,130 @@ a {
   float: right;
 } */
 
+/* activity 3 class detail */
+.dashboard-container .card .class-detail-cover-container {
+  position: relative;
+}
+
+.dashboard-container .card .class-detail-cover-container {
+  position: relative;
+  height: 40vh;
+  width: 100%;
+}
+
+.dashboard-container .card .class-detail-cover-container .class-cover-image {
+  /* position: relative; */
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+  opacity: 0.5;
+}
+
+#main-content .cover-description {
+  position: absolute;
+  padding-left: 5%;
+  padding-right: 5%;
+  top: 30%;
+  height: 40vh;
+  position: absolute;
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  align-items: center;
+  opacity: 1;
+  /* background-color: red; */
+}
+
+#main-content .cover-description .category-icon-container {
+  background-color: var(--blue);
+  width: fit-content;
+  margin-right: 3%;
+  max-height: 100%;
+}
+
+#main-content .cover-description .cover-description-content {
+  display: flex;
+  flex: 1;
+  flex-wrap: wrap;
+  padding-right: 1%;
+  align-items: center;
+  justify-content: space-between;
+  /* background-color: red; */
+}
+
+.dashboard-container .card .card-body .class-description-container {
+  padding: 5%;
+}
+
+.dashboard-container
+  .card
+  .card-body
+  .class-description-container
+  .tab-menu-container {
+  display: flex;
+  flex-wrap: wrap;
+  border-bottom: 0.7px solid rgba(0, 0, 0, 0.3);
+}
+
+.dashboard-container
+  .card
+  .card-body
+  .class-description-container
+  .tab-menu-container
+  .tab-menu {
+  font-family: Roboto;
+  font-size: 1.1rem;
+  margin-right: 4%;
+}
+
+.dashboard-container
+  .card
+  .card-body
+  .class-description-container
+  .tab-menu-container
+  .active {
+  padding-bottom: 0;
+  border-bottom: 2px solid rgba(87, 132, 186, 1);
+  color: rgba(87, 132, 186, 1);
+}
+
+.dashboard-container
+  .card
+  .card-body
+  .class-description-container
+  .description {
+  margin-top: 5%;
+}
+
+.dashboard-container
+  .card
+  .card-body
+  .class-description-container
+  .description
+  * {
+  font-family: Roboto;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 300;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.dashboard-container
+  .card
+  .card-body
+  .class-description-container
+  .description
+  h3 {
+  font-family: Montserrat;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 29px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
 @media screen and (min-width: 768px) {
   /* reset password */
   .forgot-password-container {
@@ -865,5 +1023,22 @@ a {
     .setting-icon {
     width: 1.5rem;
     margin-right: 5px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .cover-description {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .cover-description .cover-description-level {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .class-description-container {
+    margin-top: 30%;
   }
 }
