--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,6 +139,9 @@ a {
 .rounded-15px {
   border-radius: 15px;
 }
+.rounded-20px {
+  border-radius: 20px;
+}
 
 .rounded-20p {
   border-radius: 20%;
@@ -850,6 +853,313 @@ a {
   color: rgba(81, 231, 43, 1);
 }
 
+/* dashboard peserta 1 */
+.dashboard-container #dashboard-peserta {
+  /* display: flex; */
+  /* flex: 1; */
+  flex-direction: column;
+  justify-content: space-between;
+  max-width: 40vw;
+  /* height: 100%; */
+  /* background-color: red; */
+  margin-left: 1%;
+  margin-right: 1%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: calc(100vh - 20px);
+  /* margin-left: -225px; */
+  /* margin-left: 10px; */
+  /* background-color: goldenrod; */
+  border-radius: 10px;
+}
+
+.dashboard-container #dashboard-peserta .news-card {
+  height: 100%;
+  background-color: white;
+}
+
+.dashboard-container #dashboard-peserta .news-title {
+  font-family: Montserrat;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  /* margin: 2% 0 0 0; */
+  padding: 1.4rem 1rem 0.5rem 1rem;
+}
+
+.dashboard-container #dashboard-peserta .news-card .news-image-container {
+  position: relative;
+  /* height: 90%; */
+}
+
+.dashboard-container #dashboard-peserta .news-card .news-image-container img {
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.dashboard-container
+  #dashboard-peserta
+  .news-card
+  .news-image-container
+  .carousel-indicators
+  button {
+  background-color: white;
+  opacity: 0.9;
+  border: none;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+}
+
+.dashboard-container
+  #dashboard-peserta
+  .news-card
+  .news-image-container
+  .carousel-indicators
+  .active {
+  opacity: 1;
+  width: 25px;
+  height: 10px;
+  border-radius: 5px;
+  background-color: var(--blue);
+}
+
+.dashboard-container
+  #dashboard-peserta
+  .news-card
+  .news-image-container
+  .carousel-control-next,
+.dashboard-container
+  #dashboard-peserta
+  .news-card
+  .news-image-container
+  .carousel-control-prev {
+  display: none;
+}
+
+.dashboard-container
+  #dashboard-peserta
+  .news-card
+  .news-image-container
+  .date-group {
+  margin-top: 1%;
+}
+
+.dashboard-container
+  #dashboard-peserta
+  .news-card
+  .news-image-container
+  .date-group
+  .date-container {
+  padding: 2% 1% 2% 1%;
+  border-radius: 20px;
+  width: 8%;
+}
+
+.dashboard-container
+  #dashboard-peserta
+  .news-card
+  .news-image-container
+  .date-group
+  .date-container:hover,
+.dashboard-container
+  #dashboard-peserta
+  .news-card
+  .news-image-container
+  .date-group
+  .active {
+  background-color: var(--blue);
+}
+
+.dashboard-container
+  #dashboard-peserta
+  .news-card
+  .news-image-container
+  .date-group
+  span {
+  font-family: Kanit;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.dashboard-container
+  #dashboard-peserta
+  .news-card
+  .news-image-container
+  .date-group
+  .date-name {
+  margin-bottom: 1%;
+  color: rgba(152, 152, 152, 1);
+}
+
+.dashboard-container
+  #dashboard-peserta
+  .news-card
+  .news-image-container
+  .date-group
+  .date-container:hover
+  span,
+.dashboard-container
+  #dashboard-peserta
+  .news-card
+  .news-image-container
+  .date-group
+  .active
+  span {
+  color: white;
+}
+
+/* .dashboard-container
+  #dashboard-peserta
+  .news-card
+  .news-image-container
+  .date-detail {
+  display: grid;
+  background-color: goldenrod;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  align-items: center;
+  justify-items: center;
+  height: 100%;
+} */
+
+/* .dashboard-container
+  #dashboard-peserta
+  .news-card
+  .news-image-container
+  .date-detail
+  .date-time {
+  grid-column: 1;
+  grid-row: 1 / span 2;
+  gap: 20px;
+  background-color: white;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.9);
+  vertical-align: middle;
+  margin: 5px;
+}
+
+.test {
+  background-color: #fff;
+  color: #333333;
+  border-radius: 10px;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 20%);
+  padding: 10px;
+  margin: 5px;
+} */
+
+.dashboard-container
+  #dashboard-peserta
+  .news-card
+  .news-image-container
+  .date-detail {
+  display: flex;
+  /* background-color: goldenrod; */
+  padding: 5px;
+}
+
+.dashboard-container
+  #dashboard-peserta
+  .news-card
+  .news-image-container
+  .date-detail
+  .date-time {
+  display: flex;
+  flex: 1;
+  /* background-color: blue; */
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+}
+
+.dashboard-container
+  #dashboard-peserta
+  .news-card
+  .news-image-container
+  .date-detail
+  .lessons {
+  flex-direction: column;
+  flex: 2;
+  align-items: center;
+  justify-content: center;
+}
+
+.dashboard-container
+  #dashboard-peserta
+  .news-card
+  .news-image-container
+  .date-detail
+  .lessons
+  div {
+  flex: 1;
+  padding: 8%;
+  text-align: center;
+  /* background-color: red; */
+  border-radius: 10px;
+  margin: 0 5px 0 5px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+}
+
+.dashboard-container #message-container {
+  display: flex;
+  flex: 1;
+  width: 100%;
+  background-color: white;
+  padding: 2%;
+  padding: 1.4rem 2% 1.4rem 2%;
+  overflow-y: scroll;
+}
+
+.dashboard-container #message-container .search-box {
+  background-color: var(--light-blue);
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
+.dashboard-container #message-container .message {
+  margin-top: 3%;
+}
+
+.dashboard-container #message-container .message img {
+  margin-right: 5%;
+}
+
+.dashboard-container #message-container .message {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.dashboard-container #message-container .message .sender-name {
+  font-family: Kanit;
+  font-size: 1.2rem;
+  font-style: normal;
+  font-weight: 400;
+}
+.dashboard-container #message-container .message .message-content,
+.dashboard-container #message-container .message .message-timestamp {
+  font-family: Kanit;
+  font-size: 0.9rem;
+  font-style: normal;
+  font-weight: 400;
+  color: rgba(120, 120, 120, 1);
+}
+
+.dashboard-container #message-container .search-box input {
+  background-color: transparent;
+  outline: none;
+  border: none;
+}
+
+.dashboard-container #message-container .search-box input::placeholder {
+  color: black;
+}
+
 @media screen and (min-width: 768px) {
   /* reset password */
   .forgot-password-container {
@@ -897,10 +1207,10 @@ a {
 
   .dashboard-container aside {
     position: sticky;
-    top: 10px;
+    top: 2%;
     display: flex;
     background-color: var(--blue);
-    flex-basis: 225px;
+    flex-basis: 20vw;
     flex-direction: column;
     flex-shrink: 0;
     /* transition: transform 0.15s ease-in-out;
@@ -1130,6 +1440,16 @@ a {
   .cover-description-content {
     display: flex;
     flex-direction: row;
+  }
+
+  .dashboard-container #dashboard-peserta {
+    /* display: none; */
+    min-width: 100%;
+    max-width: 100%;
+  }
+
+  .dashboard-container #message-container {
+    display: none;
   }
 }
 
