--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,9 +182,6 @@ a {
   border-bottom-right-radius: 15px;
 }
 
-.circle {
-  border-radius: 50%;
-}
 
 .fill-white {
   fill: white;
@@ -203,6 +200,53 @@ a {
 }
 .rotate-90 {
   transform: rotate(90deg);
+}
+
+.flex-wrapper {
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+.single-chart {
+  width: 55%;
+  justify-content: space-around ;
+}
+
+.circular-chart {
+  display: block;
+  margin: 10px auto;
+  max-width: 80%;
+  max-height: 250px;
+}
+
+.circle-bg {
+  fill: none;
+  stroke: #eee;
+  stroke-width: 3.8;
+}
+
+.circle {
+  fill: none;
+  stroke-width: 2.8;
+  stroke-linecap: round;
+  animation: progress 1s ease-out forwards;
+}
+
+@keyframes progress {
+  0% {
+    stroke-dasharray: 0 100;
+  }
+}
+
+.circular-chart.blue .circle {
+  stroke: var(--blue);
+}
+
+.percentage {
+  fill: #666;
+  font-family: sans-serif;
+  font-size: 0.7em;
+  text-anchor: middle;
 }
 
 .td-truncate{
