fix: remove main content background color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1480,7 +1480,7 @@ a {
     min-height: calc(100vh - 20px);
     /* margin-left: -225px; */
     margin-left: 10px;
-    background-color: goldenrod;
+    /* background-color: goldenrod; */
     border-radius: 10px;
   }
 
