fix: sidebar mobile version on activity, message container on dashboard 1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -493,6 +493,8 @@ a {
   min-width: 0;
   min-height: calc(100vh - 20px);
   border-radius: 10px;
+  flex-grow: 1;
+  justify-content: start;
 }
 
 .dashboard-container #main-content .image-cover-container {
