refactor dashboard-peserta to main dashboard (student dashboard)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1035,7 +1035,7 @@ a {
   font-style: italic;
 }
 
-/* dashboard peserta 1 */
+/* student dashboard 1 */
 .dashboard-container #main-dashboard {
   /* display: flex; */
   /* flex: 1; */
